--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@ permalink: /
 <h1>Beranda</h1>
 <p>Pilih koleksi:</p>
 
-{% for collection in site.data.homepage %} {% assign matched_product = site.data.products | where: "id", collection.id | first %}
+{% for collection in site.data.homepage %}
+  {% assign matched_product = site.data.products | where: "id", collection.id | first %}
 
-<p>Koleksi ID: {{ collection.id }}</p>
+  <p>Koleksi ID: {{ collection.id }}</p>
 
-{% if matched_product %} {% include collections_list.html products=matched_product collection_id=collection.id %} {% else %}
-<p><em>Produk tidak ditemukan untuk koleksi ini.</em></p>
-{% endif %} {% endfor %}
+  {% if matched_product %}
+    {% include collections_list.html products=matched_product collection_id=collection.id %}
+  {% else %}
+    <p><em>Produk tidak ditemukan untuk koleksi ini.</em></p>
+  {% endif %}
+{% endfor %}
