--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ permalink: /
   
   {% if matched_products %}
     <p>Koleksi ID: {{ collection.id }}, {{ matched_products }}</p>
-    {% include collections_list.html products=matched_products collection_id="collection.id" %}
+    {% include collections_list.html products=matched_products collection_id=collection.id %}
   {% else %}
     <p><em>Produk tidak ditemukan untuk koleksi ini.</em></p>
   {% endif %}
