--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ permalink: /
 
   
   {% if matched_products %}
-    {% include collections_list.html products=collection.products collection_id=collection.id %}
+    {% include collections_list.html products=matched_products collection_id=collection.id %}
   {% else %}
     <p><em>Produk tidak ditemukan untuk koleksi ini.</em></p>
   {% endif %}
