--- a/pages/collections.html
+++ b/pages/collections.html
@@ -1,9 +1,17 @@
 ---
 layout: default
-title: Beranda
-permalink: /
-is_homepage: true
+title: Koleksi
+permalink: /collections/
 ---
+
+<h1>Daftar Koleksi</h1>
+
+<ul>
+  {% assign labels = site.collection | map: "label" | uniq | sort %}
+  {% for label in labels %}
+    <li><a href="/collection/{{ label | slugify }}/">{{ label | capitalize }}</a></li>
+  {% endfor %}
+</ul>
 
 {% for collection in site.data.homepage %}
   {% assign matched_collections = site.data.products | where: "id", collection.id %}
@@ -20,4 +28,3 @@ is_homepage: true
     <p><em>Koleksi dengan ID {{ collection.id }} tidak ditemukan.</em></p>
   {% endif %}
 {% endfor %}
-
