--- a/pages/search.html
+++ b/pages/search.html
@@ -11,7 +11,7 @@ permalink: /search/
     placeholder="Search in Featured Products gegegegeg" id="search-input"
   />
 </div>
-<div id="results"></div>
+<div id="results" class="flex flex-col gap-y-3"></div>
 
 <script>
   const searchInput = document.getElementById('search-input');
@@ -53,7 +53,7 @@ permalink: /search/
 
       return matchedProducts.length > 0 ? {
         title: group.title,
-        description: group.description,
+        id: group.id,
         products: matchedProducts
       } : null;
     }).filter(Boolean); // hapus null
@@ -63,12 +63,20 @@ permalink: /search/
       return;
     }
 
+    console.log({filteredCollections})
+
     // Tampilkan hasil per kategori
     filteredCollections.forEach(group => {
       let sectionHTML = `
-      <h2>${group.title}</h2>
-      <p>${group.description}</p>
-        <div class="grid grid-cols-2 gap-3 sm:grid-cols-3" data-js="product:items">
+      <div class="bg-gray-50 rounded-xl">
+        <div class="flex justify-between border-b px-3 py-2">
+          <h3 class="font-semibold">${group.title}</h3>
+          <a class="flex items-center gap-x-2" href="/collections/${group.id}">
+            <span>Lihat kategori ini</span>
+            <svg class="w-3 h-3 fill-current rotate-180" width="100%" height="100%"><use xlink:href="#i.back"></use></svg>
+          </a>
+        </div>
+        <div class="grid grid-cols-2 gap-3 sm:grid-cols-3 p-2" data-js="product:items">
       `;
 
       group.products.forEach(product => {
@@ -99,7 +107,7 @@ permalink: /search/
         `;
       });
 
-      sectionHTML += '</div>'; // Penutup div section
+      sectionHTML += '</div></div>'; // Penutup div section
       resultsContainer.innerHTML += sectionHTML;
     });
 
