--- a/pages/search.html
+++ b/pages/search.html
@@ -68,10 +68,10 @@ permalink: /search/
     // Tampilkan hasil per kategori
     filteredCollections.forEach(group => {
       let sectionHTML = `
-      <div class="bg-gray-50 rounded-xl">
-        <div class="flex justify-between border-b px-3 py-2">
+      <div class="bg-neutral-100 rounded-xl">
+        <div class="flex justify-between px-3 py-2 border-b border-neutral-200">
           <h3 class="font-semibold">${group.title}</h3>
-          <a class="flex items-center gap-x-2" href="/collections/${group.id}">
+          <a class="flex items-center gap-x-2" href="/collections/${group.id}/">
             <span>Lihat kategori ini</span>
             <svg class="w-3 h-3 fill-current rotate-180" width="100%" height="100%"><use xlink:href="#i.back"></use></svg>
           </a>
@@ -81,7 +81,7 @@ permalink: /search/
 
       group.products.forEach(product => {
         sectionHTML += `
-          <div class="relative rounded-xl overflow-hidden p-1 border bg-white border-gray-200 hover:border-gray-300" id="${product.code}">
+          <div class="relative rounded-xl overflow-hidden p-1 border bg-white border-neutral-200 hover:border-neutral-300" id="${product.code}">
             <div class="relative">
               <div class="card-deco-img relative overflow-hidden aspect-square rounded-lg bg-gray-100">
                 <img class="object-cover" alt="${product.name}" src="${product.image}" loading="lazy">
