--- a/pages/search.html
+++ b/pages/search.html
@@ -1,17 +1,19 @@
 ---
 layout: default
 title: Search Produk
-permalink: /search/
+permalink: /search
 ---
 
-<div class="flex items-center px-2 border border-slate-200 rounded-xl focus-within:border-slate-400 hover:border-slate-300 mb-5">
-  <svg class="h-4 w-4 mr-2" width="100%" height="100%"><use xlink:href="#i.fire"></use></svg>
-  <input
-    class="w-full bg-transparent placeholder:text-slate-400 text-slate-700 text-sm px-1 py-2 transition duration-300 ease focus:outline-none"
-    placeholder="Search in Featured Products gegegegeg" id="search-input"
-  />
+<div id="results" class="flex flex-col gap-y-3">
+  <div class="bg-neutral-100 rounded-xl p-4 text-sm text-slate-700">
+    <p class="font-medium mb-1">Cara Mencari Produk:</p>
+    <ul class="list-disc list-inside space-y-1 mb-1">
+      <li>Ketik <span class="font-semibold">nama produk</span> untuk mencari berdasarkan nama.</li>
+      <li>Atau gunakan <span class="font-semibold">kode produk</span> (misalnya: <code class="bg-white px-1 py-0.5 rounded text-xs">PRD12345</code>) untuk hasil yang lebih spesifik.</li>
+    </ul>
+    <p class="mt-2 text-slate-500">Gunakan kolom pencarian di atas untuk memulai.</p>
+  </div>
 </div>
-<div id="results" class="flex flex-col gap-y-3"></div>
 
 <script>
   const searchInput = document.getElementById('search-input');
@@ -31,7 +33,7 @@ permalink: /search/
 
       searchInput.addEventListener('input', function () {
         const keyword = this.value.toLowerCase();
-        history.replaceState(null, '', `?keyword=${encodeURIComponent(keyword)}`);
+        history.replaceState(null, '', keyword ? `?keyword=${encodeURIComponent(keyword)}` : location.pathname);
         renderResults(data, keyword);
       });
     });
