--- a/pages/search.html
+++ b/pages/search.html
@@ -88,9 +88,12 @@ permalink: /search
               <div class="card-deco-img relative overflow-hidden aspect-square rounded-lg bg-gray-100">
                 <img class="object-cover" alt="${product.name}" src="${product.image}" loading="lazy">
               </div>
-              <button class="absolute rounded-sm flex items-center inline-flex bg-gray-50 px-1 py-0.5 text-xs font-medium text-gray-500 h-5 top-1 right-1 cursor-pointer z-7">
+              <!-- <button class="absolute rounded-sm flex items-center inline-flex bg-gray-50 px-1 py-0.5 text-xs font-medium text-gray-500 h-5 top-1 right-1 cursor-pointer z-7">
+                 <svg class="w-3.5 h-3.5" width="100%" height="100%"><use xlink:href="#i.bookmark"></use></svg>
+               </button> -->
+              <label class="absolute rounded-sm flex items-center inline-flex bg-gray-50 px-1 py-0.5 text-xs font-medium text-gray-500 h-5 top-1 right-1 cursor-pointer z-7" for="inModal--comingSoon">
                 <svg class="w-3.5 h-3.5" width="100%" height="100%"><use xlink:href="#i.bookmark"></use></svg>
-              </button>
+              </label>
               <span class="absolute rounded-sm flex items-center inline-flex items-center bg-gray-50 px-1 py-0.5 text-xs font-medium text-gray-500 left-1 top-1">
                 <svg class="w-3.5 h-3.5 opacity-70 text-yellow-400" width="100%" height="100%"><use xlink:href="#i.rating"></use></svg>
                 <span class="ml-1">${product.rating}</span>
@@ -100,9 +103,9 @@ permalink: /search
             </div>
             <div class="p-1 -mt-4">
               <div class="relative font-heading w-[calc(100%-4.5rem)] text-xxs text-gray-500 mb-1.5">
-                Terjual 1250
+                ${setting.messages.quantitySold.replace("[NUMBER]", String(product.sales))}
               </div>
-              <span class="go font-heading text-xs text-gray-800 mb-1 line-clamp-2" data-js="product:modal" data-content='${JSON.stringify(product)}'>${product.name}</span>
+              <span class="go font-heading text-xs text-gray-800 mb-1 line-clamp-2" data-js="product:modalClick" data-content='${JSON.stringify(product)}'>${product.name}</span>
               <div class="font-bold text-gray-900">${product.price}</div>
             </div>
           </div>
