--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@ permalink: /
 
 <!-- [ NAV ] -->
 {% if site.data.homepage.size > 1 %}
-  <nav class="w-full bg-neutral-400 rounded-xl border-2 border-neutral-400 overflow-hidden">
+  <nav class="bg-neutral-400 rounded-full border-2 border-neutral-400 overflow-hidden max-w-xs mx-auto">
     <div class="w-full flex">
       {% for item in site.data.homepage %}
-        <button class="tab-button flex-1 py-3 text-center h-8 rounded-lg text-white {% if forloop.first %}active{% endif %}" data-tab-target="#{{ item.id }}">{{ item.title }}</button>
+        <button class="tab-button flex-1 py-3 text-center h-9 rounded-full text-white {% if forloop.first %}active{% endif %}" data-tab-target="#{{ item.id }}">{{ item.title }}</button>
       {% endfor %}
     </div>
   </nav>
