--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ permalink: /
 ---
 
 <style>
-  .newlink{transition: box-shadow 0.1s ease 0s, transform 0.2s ease 0s;padding: 10px 20px;border-radius: 0.75rem;}
+  .tab-button:hover{background-color: #ffffff30}
 </style>
 <style>
   :root{--x15:#f8f9fa;--x3:#333;--x21:#dee2e6;--x14:none}
