--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ permalink: /
 
 <!-- [ NAV ] -->
 {% if site.data.homepage.size > 1 %}
-  <nav class="bg-neutral-400 rounded-full border-2 border-neutral-400 overflow-hidden max-w-xs mx-auto">
+  <nav class="bg-neutral-400 rounded-full border-2 border-neutral-400 overflow-hidden max-w-xs mx-auto mb-5">
     <div class="w-full flex">
       {% for item in site.data.homepage %}
         <button class="tab-button flex-1 py-3 text-center h-9 rounded-full text-white {% if forloop.first %}active{% endif %}" data-tab-target="#{{ item.id }}">{{ item.title }}</button>
@@ -29,7 +29,7 @@ permalink: /
   </nav>
 {% endif %}
 
-<div class="tab-content-wrapper mt-8">
+<div class="tab-content-wrapper">
   {% for item in site.data.homepage %}
     <div id="{{ item.id }}" class="tab-content {% unless forloop.first %}hidden{% endunless %}">
       {% assign current_data = site.data[item.id] %}
